...
    private func showRightAnswerAlert(button: UIButton) {
        haveWon = true
        rightAnswers += 1
        UIView.transition(with: button, duration: 1.3, options: [.transitionFlipFromBottom]) {
            button.backgroundColor = .systemGreen
        } completion: { (_) in
            let alertController = UIAlertController(title: "You're right 🥳", message: "Go on...", preferredStyle: UIAlertController.Style.alert)
            alertController.addAction(UIAlertAction(title: "Yes!", style: UIAlertAction.Style.default, handler: { [weak self] (_) in
                self?.goToNextScreen()
            }))
            self.present(alertController, animated: true, completion: nil)
        }
    }
...
